Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/AActor.h

	DOTNET_EXPORT auto E_PROP_AActor_bActorSeamlessTraveled_GET(AActor* Ptr) { return Ptr->bActorSeamlessTraveled; }
	DOTNET_EXPORT void E_PROP_AActor_bActorSeamlessTraveled_SET(AActor* Ptr, uint8 Value) { Ptr->bActorSeamlessTraveled = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bAllowTickBeforeBeginPlay_GET(AActor* Ptr) { return Ptr->bAllowTickBeforeBeginPlay; }
	DOTNET_EXPORT void E_PROP_AActor_bAllowTickBeforeBeginPlay_SET(AActor* Ptr, uint8 Value) { Ptr->bAllowTickBeforeBeginPlay = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bAlwaysRelevant_GET(AActor* Ptr) { return Ptr->bAlwaysRelevant; }
	DOTNET_EXPORT void E_PROP_AActor_bAlwaysRelevant_SET(AActor* Ptr, uint8 Value) { Ptr->bAlwaysRelevant = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bAutoDestroyWhenFinished_GET(AActor* Ptr) { return Ptr->bAutoDestroyWhenFinished; }
	DOTNET_EXPORT void E_PROP_AActor_bAutoDestroyWhenFinished_SET(AActor* Ptr, uint8 Value) { Ptr->bAutoDestroyWhenFinished = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bBlockInput_GET(AActor* Ptr) { return Ptr->bBlockInput; }
	DOTNET_EXPORT void E_PROP_AActor_bBlockInput_SET(AActor* Ptr, uint8 Value) { Ptr->bBlockInput = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bCanBeDamaged_GET(AActor* Ptr) { return Ptr->bCanBeDamaged; }
	DOTNET_EXPORT void E_PROP_AActor_bCanBeDamaged_SET(AActor* Ptr, uint8 Value) { Ptr->bCanBeDamaged = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bCollideWhenPlacing_GET(AActor* Ptr) { return Ptr->bCollideWhenPlacing; }
	DOTNET_EXPORT void E_PROP_AActor_bCollideWhenPlacing_SET(AActor* Ptr, uint8 Value) { Ptr->bCollideWhenPlacing = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bEnableAutoLODGeneration_GET(AActor* Ptr) { return Ptr->bEnableAutoLODGeneration; }
	DOTNET_EXPORT void E_PROP_AActor_bEnableAutoLODGeneration_SET(AActor* Ptr, uint8 Value) { Ptr->bEnableAutoLODGeneration = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bExchangedRoles_GET(AActor* Ptr) { return Ptr->bExchangedRoles; }
	DOTNET_EXPORT void E_PROP_AActor_bExchangedRoles_SET(AActor* Ptr, uint8 Value) { Ptr->bExchangedRoles = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bFindCameraComponentWhenViewTarget_GET(AActor* Ptr) { return Ptr->bFindCameraComponentWhenViewTarget; }
	DOTNET_EXPORT void E_PROP_AActor_bFindCameraComponentWhenViewTarget_SET(AActor* Ptr, uint8 Value) { Ptr->bFindCameraComponentWhenViewTarget = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bGenerateOverlapEventsDuringLevelStreaming_GET(AActor* Ptr) { return Ptr->bGenerateOverlapEventsDuringLevelStreaming; }
	DOTNET_EXPORT void E_PROP_AActor_bGenerateOverlapEventsDuringLevelStreaming_SET(AActor* Ptr, uint8 Value) { Ptr->bGenerateOverlapEventsDuringLevelStreaming = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bHidden_GET(AActor* Ptr) { return Ptr->bHidden; }
	DOTNET_EXPORT void E_PROP_AActor_bHidden_SET(AActor* Ptr, uint8 Value) { Ptr->bHidden = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bIgnoresOriginShifting_GET(AActor* Ptr) { return Ptr->bIgnoresOriginShifting; }
	DOTNET_EXPORT void E_PROP_AActor_bIgnoresOriginShifting_SET(AActor* Ptr, uint8 Value) { Ptr->bIgnoresOriginShifting = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bIsEditorOnlyActor_GET(AActor* Ptr) { return Ptr->bIsEditorOnlyActor; }
	DOTNET_EXPORT void E_PROP_AActor_bIsEditorOnlyActor_SET(AActor* Ptr, uint8 Value) { Ptr->bIsEditorOnlyActor = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_BlueprintCreatedComponents_GET(AActor* Ptr) { return ConvertToManage_TemplatePointerDescription(Ptr->BlueprintCreatedComponents); }
	DOTNET_EXPORT void E_PROP_AActor_BlueprintCreatedComponents_SET(AActor* Ptr, INT_PTR Value) { Ptr->BlueprintCreatedComponents = *(TArray<UActorComponent*>*)Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bNetLoadOnClient_GET(AActor* Ptr) { return Ptr->bNetLoadOnClient; }
	DOTNET_EXPORT void E_PROP_AActor_bNetLoadOnClient_SET(AActor* Ptr, uint8 Value) { Ptr->bNetLoadOnClient = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bNetStartup_GET(AActor* Ptr) { return Ptr->bNetStartup; }
	DOTNET_EXPORT void E_PROP_AActor_bNetStartup_SET(AActor* Ptr, uint8 Value) { Ptr->bNetStartup = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bNetTemporary_GET(AActor* Ptr) { return Ptr->bNetTemporary; }
	DOTNET_EXPORT void E_PROP_AActor_bNetTemporary_SET(AActor* Ptr, uint8 Value) { Ptr->bNetTemporary = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bNetUseOwnerRelevancy_GET(AActor* Ptr) { return Ptr->bNetUseOwnerRelevancy; }
	DOTNET_EXPORT void E_PROP_AActor_bNetUseOwnerRelevancy_SET(AActor* Ptr, uint8 Value) { Ptr->bNetUseOwnerRelevancy = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bOnlyRelevantToOwner_GET(AActor* Ptr) { return Ptr->bOnlyRelevantToOwner; }
	DOTNET_EXPORT void E_PROP_AActor_bOnlyRelevantToOwner_SET(AActor* Ptr, uint8 Value) { Ptr->bOnlyRelevantToOwner = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bRelevantForLevelBounds_GET(AActor* Ptr) { return Ptr->bRelevantForLevelBounds; }
	DOTNET_EXPORT void E_PROP_AActor_bRelevantForLevelBounds_SET(AActor* Ptr, uint8 Value) { Ptr->bRelevantForLevelBounds = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bRelevantForNetworkReplays_GET(AActor* Ptr) { return Ptr->bRelevantForNetworkReplays; }
	DOTNET_EXPORT void E_PROP_AActor_bRelevantForNetworkReplays_SET(AActor* Ptr, uint8 Value) { Ptr->bRelevantForNetworkReplays = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bReplayRewindable_GET(AActor* Ptr) { return Ptr->bReplayRewindable; }
	DOTNET_EXPORT void E_PROP_AActor_bReplayRewindable_SET(AActor* Ptr, uint8 Value) { Ptr->bReplayRewindable = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bReplicateMovement_GET(AActor* Ptr) { return Ptr->bReplicateMovement; }
	DOTNET_EXPORT void E_PROP_AActor_bReplicateMovement_SET(AActor* Ptr, uint8 Value) { Ptr->bReplicateMovement = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bTearOff_GET(AActor* Ptr) { return Ptr->bTearOff; }
	DOTNET_EXPORT void E_PROP_AActor_bTearOff_SET(AActor* Ptr, uint8 Value) { Ptr->bTearOff = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_Children_GET(AActor* Ptr) { return ConvertToManage_TemplatePointerDescription(Ptr->Children); }
	DOTNET_EXPORT void E_PROP_AActor_Children_SET(AActor* Ptr, INT_PTR Value) { Ptr->Children = *(TArray<AActor*>*)Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_CreationTime_GET(AActor* Ptr) { return Ptr->CreationTime; }
	DOTNET_EXPORT void E_PROP_AActor_CreationTime_SET(AActor* Ptr, float Value) { Ptr->CreationTime = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_CustomTimeDilation_GET(AActor* Ptr) { return Ptr->CustomTimeDilation; }
	DOTNET_EXPORT void E_PROP_AActor_CustomTimeDilation_SET(AActor* Ptr, float Value) { Ptr->CustomTimeDilation = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_InitialLifeSpan_GET(AActor* Ptr) { return Ptr->InitialLifeSpan; }
	DOTNET_EXPORT void E_PROP_AActor_InitialLifeSpan_SET(AActor* Ptr, float Value) { Ptr->InitialLifeSpan = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_InputPriority_GET(AActor* Ptr) { return Ptr->InputPriority; }
	DOTNET_EXPORT void E_PROP_AActor_InputPriority_SET(AActor* Ptr, int32 Value) { Ptr->InputPriority = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_Instigator_GET(AActor* Ptr) { return ConvertToManage_ObjectPointerDescription(Ptr->Instigator); }
	DOTNET_EXPORT void E_PROP_AActor_Instigator_SET(AActor* Ptr, APawn* Value) { Ptr->Instigator = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_Layers_GET(AActor* Ptr) { return ConvertToManage_TemplatePointerDescription(Ptr->Layers); }
	DOTNET_EXPORT void E_PROP_AActor_Layers_SET(AActor* Ptr, INT_PTR Value) { Ptr->Layers = *(TArray<FName>*)Value; }
	DOTNET_EXPORT auto E_AActor_UpdateAllReplicatedComponents(AActor* Self)
	{
		Self->UpdateAllReplicatedComponents();
	}
	DOTNET_EXPORT auto E_AActor_UpdateComponentTransforms(AActor* Self)
	{
		Self->UpdateComponentTransforms();
	}
	DOTNET_EXPORT auto E_AActor_UpdateOverlaps(AActor* Self, bool bDoNotifies)
	{
		auto _p0 = bDoNotifies;
		Self->UpdateOverlaps(_p0);
	}
	DOTNET_EXPORT auto E_AActor_UpdateReplicatedComponent(AActor* Self, UActorComponent* Component)
	{
		auto _p0 = Component;
		Self->UpdateReplicatedComponent(_p0);
	}
	DOTNET_EXPORT auto E_AActor_UserConstructionScript(AActor* Self)
	{
		Self->UserConstructionScript();
	}
	DOTNET_EXPORT auto E_AActor_UseShortConnectTimeout(AActor* Self)
	{
		return Self->UseShortConnectTimeout();
	}
	DOTNET_EXPORT auto E_AActor_WasRecentlyRendered(AActor* Self, float Tolerance)
	{
		auto _p0 = Tolerance;
		return Self->WasRecentlyRendered(_p0);
	}